# native_lib

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle
android/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/src/main/cpp/include/: common.h  devignet.h  twoFisheyeBlend.h
android/src/main/kotlin/com/example/native_lib/: NativeLibPlugin.kt
example/ios/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/: project.pbxproj
lib/: native_lib.dart
lib/include/: HDRFuse.h  common.h
macos/: native_lib.podspec
macos/Classes/: NativeLibPlugin.swift
native_lib/: README.md  pubspec.yaml
native_lib/android/src/main/kotlin/com/example/native_lib/: NativeLibPlugin.kt
native_lib/example/: pubspec.yaml
native_lib/example/android/app/: build.gradle
native_lib/example/android/app/src/main/: AndroidManifest.xml
native_lib/example/android/app/src/main/kotlin/com/example/native_lib_example/: MainActivity.kt
native_lib/example/lib/: main.dart
native_lib/example/macos/Flutter/: GeneratedPluginRegistrant.swift
native_lib/example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
native_lib/example/macos/Runner/Configs/: AppInfo.xcconfig
native_lib/example/test/: widget_test.dart
native_lib/ios/: native_lib.podspec
native_lib/lib/: native_lib.dart
